--- a/Week 1/index.html
+++ b/Week 1/index.html
@@ -1,9 +1,9 @@
-!doctype
+<!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Allison Ruault Wright | WDD 130</title>
     </head> 
     <body>  
@@ -22,6 +22,7 @@
                 He is the best husband and father. When I'm not working or spending time with my family, I enjoy reading and
                 playing video games. 
             </p>
+        </main>
         <footer>
             <p>
                 © 2025 👻 Allison Ruault Wright 👻, Ohio, USA
@@ -29,4 +30,3 @@
         </footer>
     </body>
 </html>
-d
