--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -24,7 +24,8 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, error!</p>
         </main>
         <aside>
-            <img src="https://via.placeholder.com/150" alt="Placeholder image">
+            <img src="https://www.churchofjesuschrist.org/temples/photo-gallery/manti-utah-temple?lang=eng" 
+            alt="Manti Temple" width="200" height="200">
         </aside>
         <footer>
             <p>👻 2023 Allison R. Wright</p>
