change my external links

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -13,10 +13,8 @@
         </header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://open.spotify.com/artist/2CmaKO2zEGJ1NWpS1yfVGz?si=V2zISMY3Q1KxhEkOYI2-1A">Falling in Reverse</a></li>
+                <li><a href="https://open.spotify.com/album/4rKpyXuKGtcZvaHFIXgjLP?si=pOFhy5ZgSMOcOAaatPdI9A">Disney goes Punk</a></li>
             </ul>
         </nav>
         <main>
