working on the image

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -18,12 +18,18 @@
             </ul>
         </nav>
         <main>
-            <h2>Welcome to the Holy Grail Layout Example</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, error!</p>
-        </main>
+            <section>
+                <h2>Heading 1 for Holy Grail</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, error!</p>
+            </section>
+            <section>
+                <h2>Heading 2 for Holy Grail</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, cumque.</p>
+            </section>
+            </main>
         <aside>
             <img src="https://www.churchofjesuschrist.org/temples/photo-gallery/manti-utah-temple?lang=eng" 
-            alt="Manti Temple" width="200" height="200">
+            alt="Manti Temple" width="200">
         </aside>
         <footer>
             <p>👻 2023 Allison R. Wright</p>
