--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -28,7 +28,7 @@
             </section>
             </main>
         <aside>
-            <img src="https://www.churchofjesuschrist.org/temples/photo-gallery/manti-utah-temple?lang=eng" 
+            <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manti-utah/320x200/manti-temple-759209-wallpaper.jpg" 
             alt="Manti Temple" width="200">
         </aside>
         <footer>
