updating styles css doc and index

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
                 playing video games. 
             </p>
         </main>
+        <aside>
+            <h2>Ohio, United States</h2>
+            <img src="images/Guardians.png" alt="Cleveland's baseball team'" width="200">
+            <p>
+                Ohio is a state in the East North Central region of the 
+                Midwestern United States. Of the fifty states, it is the 34th largest by area, 
+                the seventh most populous, and the tenth most densely populated. 
+                The state's capital and largest city is Columbus. The guardians are our baseball team.
+                The browns are our football team.
+            </p>
+        </aside>
         <footer>
             <p>
                 © 2025 👻 Allison Ruault Wright 👻, Ohio, USA
