--- a/week03/wireframe.html
+++ b/week03/wireframe.html
@@ -11,13 +11,13 @@
             <img src="" alt="">
             <nav>
                 <a href="#">Home</a>
-                <a href="#">Rafting Website</a>
-                <a href="#">About</a>
+                <a href="#">Trips</a>
+                <a href="#">About Us</a>
                 <a href="#">Contact</a>
             </nav>
         </header>
         <main>
-            <h1>Allison Ruault Wright</h1>
+            <h1>Water Rafting for you</h1>
             <img src="" alt="p" width="200" height="200">
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
