--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="
+styles/styles.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Allison Ruault Wright | WDD 130</title>
