--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="
-styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Allison Ruault Wright's personal website.">
+        <meta name="author" content="Allison Ruault Wright">
         <title>Allison Ruault Wright | WDD 130</title>
     </head> 
     <body>  
