--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,20 +14,20 @@
     </head> 
     <body>
         <header>
-            <img scr="images/whitewater.png" alt="white water rafting logo" width="200">
+            <img scr="images/wwrLogo.png" alt="white water rafting logo" width="200">
             <nav>
-                <a href="index.html">Home</a>
-                <a href="wwr/">Rafting Website</a>
-                <a href="wwr/about.html">About US</a>
-                <a href="wwr/gallery.html">Gallery</a>
+                <a href="Home">Home</a>
+                <a href="AboutUs">Rafting Website</a>
+                <a href="Trips">About US</a>
+                <a href="Contact">Gallery</a>
             </nav>
         </header>
         <div class="hero">
-            <img src="images/hero.jpg" alt="Rafting Adventure">
+            <img src="images/wwrLogo.png" alt="Rafting Adventure">
             <h1>White Water Rafting Adventures</h1>
         </div>
         <article>
-            <img src="images/happy-client.jpg" alt="Happy Client">
+            <img src="images/hrafting.png" alt="Happy Client">
             <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
         </article>
         <section>
@@ -36,15 +36,18 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting1.jpg" alt="Rafting Image 1">
-            <img src="images/rafting2.jpg" alt="Rafting Image 2">
-            <img src="images/rafting3.jpg" alt="Rafting Image 3">
-            <img src="images/rafting4.jpg" alt="Rafting Image 4">
-            <img src="images/rafting5.jpg" alt="Rafting Image 5">
+            <img src="images/rafting1.png" alt="Rafting Image 1">
+            <img src="images/rafting2.png" alt="Rafting Image 2">
+            <img src="images/rafting3.png" alt="Rafting Image 3">
+            <img src="images/rafting4.png" alt="Rafting Image 4">
+            <img src="images/rafting5.png" alt="Rafting Image 5">
         </section>
     </main>
     <footer>
         <p>&copy; 2024 White Water Rafting. All rights reserved.</p>
+        <a href="https://facebook.com"><img src="images/f.logo.png" alt="Facebook"></a>
+        <a href="https://twitter.com"><img src="images/tweet.png" alt="Twitter"></a>
+        <a href="https:Instagram.com"><img src="images/insta.png" alt="Instagram"></a>
     </footer>
     </body>
 </html>
