--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,8 @@
     <head>
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/aboutus.css">
-        <link rel="stylesheet" href="google">
+        <link href="http://fonts.google.com/specimen/Roboto">
+        <link href="http://fonts.google.com/specimen/Rock+Salt">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <meta charset="utf-8">
