updated logo and images

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
     </head> 
     <body>
         <header>
-            <img scr="images/wwrLogo.png" alt="white water rafting logo" width="200">
+            <img src="images/logo.png" alt="White Water Rafting Logo">
             <nav>
                 <a href="Home">Home</a>
                 <a href="AboutUs">Rafting Website</a>
@@ -24,11 +24,11 @@
             </nav>
         </header>
         <div class="hero">
-            <img src="images/wwrLogo.png" alt="Rafting Adventure">
+            <img src="images/hrafting.png" alt="Rafting Adventure">
             <h1>White Water Rafting Adventures</h1>
         </div>
         <article>
-            <img src="images/hrafting.png" alt="Happy Client">
+            <img src="images/happyRafting.png" alt="Happy Client">
             <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
         </article>
         <section>
