--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles/styles.css">
-        <link rel="stylesheet" href="styles/aboutus.css">
+        <link rel="stylesheet" href="styles/rafting.css">
         <link href="http://fonts.google.com/specimen/Roboto">
         <link href="http://fonts.google.com/specimen/Rock+Salt">
         <link rel="preconnect" href="https://fonts.googleapis.com">
