--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,13 +16,13 @@
         <header>
             <img src="images/logo.png" alt="White Water Rafting Logo">
             <nav>
-                <a href="Home">Home</a>
-                <a href="AboutUs">Rafting Website</a>
-                <a href="Trips">About US</a>
-                <a href="Contact">Gallery</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
-        <main>>
+        <main>
             <div class="hero">
                 <img src="images/hrafting.png" alt="Rafting Adventure">
                 <h1>White Water Rafting Adventures</h1>
