--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,10 +38,10 @@
             <section>
                 <h2>Adventure Awaits You!</h2>
                 <img src="images/rafting1.png" alt="Rafting Image 1">
-                <img src="images/rafting2.png" alt="Rafting Image 2">
-                <img src="images/rafting3.png" alt="Rafting Image 3">
-                <img src="images/rafting4.png" alt="Rafting Image 4">
-                <img src="images/rafting5.png" alt="Rafting Image 5">
+                <img src="images/rafting2.jpg" alt="Rafting Image 2">
+                <img src="images/rafting3.jpg" alt="Rafting Image 3">
+                <img src="images/rafting4.jpg" alt="Rafting Image 4">
+                <img src="images/rafting5.jpg" alt="Rafting Image 5">
             </section>
         </main>
     <footer>
