updating about fime to make sure it passes the rubric

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,10 +2,8 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles/rafting.css">
-        <link href="http://fonts.google.com/specimen/Roboto">
-        <link href="http://fonts.google.com/specimen/Rock+Salt">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="About US rafting information page.">
@@ -26,29 +24,30 @@
             <div class="hero">
                 <img src="images/hrafting.png" alt="Rafting Adventure">
                 <h1>White Water Rafting Adventures</h1>
+                <section>
+                    <h2>History</h2>
+                    <p>Since our founding, we have guided countless adventurers through the most exhilarating white water rapids.</p>
+                </section>
+                <section class="adventure">
+                    <h2>Adventure Awaits You!</h2>
+                    <img src="images/rafting1.png" alt="Rafting Image 1">
+                    <img src="images/rafting2.jpg" alt="Rafting Image 2">
+                    <img src="images/rafting3.jpg" alt="Rafting Image 3">
+                    <img src="images/rafting4.jpg" alt="Rafting Image 4">
+                    <img src="images/rafting5.jpg" alt="Rafting Image 5">
+                </section>
             </div>
             <article>
-                <img src="images/happyRafting.png" alt="Happy Client">
+               <img src="images/happyRafting.png" alt="Happy Client">
                 <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
-            </article>
-            <section>
-                <h2>History</h2>
-                <p>Since our founding, we have guided countless adventurers through the most exhilarating white water rapids.</p>
-            </section>
-            <section>
-                <h2>Adventure Awaits You!</h2>
-                <img src="images/rafting1.png" alt="Rafting Image 1">
-                <img src="images/rafting2.jpg" alt="Rafting Image 2">
-                <img src="images/rafting3.jpg" alt="Rafting Image 3">
-                <img src="images/rafting4.jpg" alt="Rafting Image 4">
-                <img src="images/rafting5.jpg" alt="Rafting Image 5">
-            </section>
+            </article> 
+            
         </main>
-    <footer>
-        <p>&copy; 2024 White Water Rafting. All rights reserved.</p>
-        <a href="https://facebook.com"><img src="images/f.logo.png" alt="Facebook"></a>
-        <a href="https://twitter.com"><img src="images/tweet.png" alt="Twitter"></a>
-        <a href="https://Instagram.com"><img src="images/insta.png" alt="Instagram"></a>
-    </footer>
+        <footer>
+            <p>&copy; 2024 White Water Rafting. All rights reserved.</p>
+            <a href="https://facebook.com"><img src="images/f.logo.png" alt="Facebook"></a>
+            <a href="https://twitter.com"><img src="images/tweet.png" alt="Twitter"></a>
+            <a href="https://Instagram.com"><img src="images/insta.png" alt="Instagram"></a>
+        </footer>
     </body>
 </html>
