updating few mistakes

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,30 +24,31 @@
             <div class="hero">
                 <img src="images/hrafting.png" alt="Rafting Adventure">
                 <h1>White Water Rafting Adventures</h1>
-                <section>
-                    <h2>History</h2>
-                    <p>Since our founding, we have guided countless adventurers through the most exhilarating white water rapids.</p>
-                </section>
-                <section class="adventure">
-                    <h2>Adventure Awaits You!</h2>
-                    <img src="images/rafting1.png" alt="Rafting Image 1">
-                    <img src="images/rafting2.jpg" alt="Rafting Image 2">
-                    <img src="images/rafting3.jpg" alt="Rafting Image 3">
-                    <img src="images/rafting4.jpg" alt="Rafting Image 4">
-                    <img src="images/rafting5.jpg" alt="Rafting Image 5">
-                </section>
+                <article>
+                    <img src="images/happyRafting.png" alt="Happy Client">
+                    <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
+                </article> 
             </div>
-            <article>
-               <img src="images/happyRafting.png" alt="Happy Client">
-                <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
-            </article> 
-            
+            <section>
+                <h2>History</h2>
+                <p>Since our founding, we have guided countless adventurers through the most exhilarating white water rapids.</p>
+            </section>
+            <section>
+                <h2>Adventure Awaits You!</h2>
+                <img src="images/rafting1.png" alt="Rafting Image 1">
+                <img src="images/rafting2.jpg" alt="Rafting Image 2">
+                <img src="images/rafting3.jpg" alt="Rafting Image 3">
+                <img src="images/rafting4.jpg" alt="Rafting Image 4">
+                <img src="images/rafting5.jpg" alt="Rafting Image 5">
+            </section>
         </main>
-        <footer>
-            <p>&copy; 2024 White Water Rafting. All rights reserved.</p>
+    <footer>
+        <p>&copy; 2024 White Water Rafting. Created by Allison R. Wright</p>
+        <nav>
             <a href="https://facebook.com"><img src="images/f.logo.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/tweet.png" alt="Twitter"></a>
             <a href="https://Instagram.com"><img src="images/insta.png" alt="Instagram"></a>
-        </footer>
+        </nav> 
+    </footer>
     </body>
 </html>
