adding class hclient

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,10 +21,10 @@
             </nav>
         </header>
         <main>
-            <div class="hero">
+            <div class="hero" >
                 <img src="images/hrafting.png" alt="Rafting Adventure">
                 <h1>White Water Rafting Adventures</h1>
-                <article>
+                <article class="hclient">
                     <img src="images/happyRafting.png" alt="Happy Client">
                     <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
                 </article> 
