--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,10 +24,12 @@
             <div class="hero" >
                 <img src="images/hrafting.png" alt="Rafting Adventure">
                 <h1>White Water Rafting Adventures</h1>
-                <article >
-                    <img src="images/happyRafting.png" alt="Happy Client" class="hclient">
-                    <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
-                </article> 
+                <div >
+                    <article class="hclient">
+                        <img src="images/happyRafting.png" alt="Happy Client">
+                        <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
+                    </article> 
+                </div>
             </div>
             <section>
                 <h2>History</h2>
