updating about you page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,14 +11,16 @@
         <title>About US | White Water Rafting</title>
     </head> 
     <body>
-        <header>
-            <img src="images/logo.png" alt="White Water Rafting Logo">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+        <header class="headerGrid">
+            <div>
+                <img src="images/logo.png" alt="White Water Rafting Logo">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="trips.html">Trips</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
         </header>
         <main>
             <div class="hero" >
@@ -29,26 +31,41 @@
                         <p>Our mission is to provide thrilling and safe white water rafting experiences for all adventure seekers.</p>
                     </article> 
             </div>
-            <section>
+            <section class="historyLayout">
                 <h2>History</h2>
                 <p>Since our founding, we have guided countless adventurers through the most exhilarating white water rapids.</p>
             </section>
-            <section>
+            <section class="adventureLayout">
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/rafting1.png" alt="Rafting Image 1">
-                <img src="images/rafting2.jpg" alt="Rafting Image 2">
-                <img src="images/rafting3.jpg" alt="Rafting Image 3">
-                <img src="images/rafting4.jpg" alt="Rafting Image 4">
-                <img src="images/rafting5.jpg" alt="Rafting Image 5">
+                <figure>
+                    <img src="images/rafting1.png" alt="Rafting Image 1">
+                    <figcaption>Memmetsaurous Rapid</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting2.jpg" alt="Rafting Image 2">
+                    <figcaption>Osiris Rapid</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting3.jpg" alt="Rafting Image 3">
+                    <figcaption>Noodle Creek</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting4.jpg" alt="Rafting Image 4">
+                    <figcaption>Maguito Gandalf Rapid</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting5.jpg" alt="Rafting Image 5">
+                    <figcaption>Gotham Kitty Adventure</figcaption>
+                </figure>  
             </section>
         </main>
+    </body>
     <footer>
         <p>&copy; 2024 White Water Rafting. Created by Allison R. Wright</p>
-        <nav>
+        <div class="socLinks">
             <a href="https://facebook.com"><img src="images/f.logo.png" alt="Facebook"></a>
             <a href="https://twitter.com"><img src="images/tweet.png" alt="Twitter"></a>
             <a href="https://Instagram.com"><img src="images/insta.png" alt="Instagram"></a>
-        </nav> 
+        </div> 
     </footer>
-    </body>
 </html>
