--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,6 +34,8 @@
             <section class="historyLayout">
                 <h2>History</h2>
                 <p>Since our founding, we have guided countless adventurers through the most exhilarating white water rapids.</p>
+                <img src="images/rafting4.jpg" alt="Rafting Image 4">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, aperiam ipsum! Corrupti in fuga facilis non quasi, voluptas ipsum sapiente? Explicabo eligendi itaque exercitationem? Magni voluptas iusto commodi nostrum voluptatibus?</p>
             </section>
             <section class="adventureLayout">
                 <h2>Adventure Awaits You!</h2>
@@ -50,7 +52,7 @@
                     <figcaption>Noodle Creek</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting4.jpg" alt="Rafting Image 4">
+                    
                     <figcaption>Maguito Gandalf Rapid</figcaption>
                 </figure>
                 <figure>
