updating History layout

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,9 +33,11 @@
             </div>
             <section class="historyLayout">
                 <h2>History</h2>
-                <p>Since our founding, we have guided countless adventurers through the most exhilarating white water rapids.</p>
-                <img src="images/rafting4.jpg" alt="Rafting Image 4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, aperiam ipsum! Corrupti in fuga facilis non quasi, voluptas ipsum sapiente? Explicabo eligendi itaque exercitationem? Magni voluptas iusto commodi nostrum voluptatibus?</p>
+                <div class="historyContent">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab incidunt molestiae pariatur at numquam quam optio quaerat, fugiat, veritatis corrupti explicabo fugit temporibus ea! Et facilis eaque rerum dolores earum? Cumque eos accusantium praesentium neque quibusdam illum, quod repellendus nobis aspernatur numquam quos enim, commodi aperiam tempore cum rem? Ea. Since our founding, we have guided countless adventurers through the most exhilarating white water rapids</p>
+                    <img src="images/rafting4.jpg" alt="Rafting Image 4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ea dicta deserunt aperiam ipsa soluta corrupti itaque tempore hic. Sit vel reiciendis iusto omnis molestias dicta rem tempora. Dicta neque ipsum sint fugit deserunt iure reprehenderit quas totam rem, sunt autem reiciendis aspernatur earum eligendi libero recusandae dignissimos doloremque voluptate voluptatem officiis exercitationem explicabo numquam. Neque dolores deleniti nihil vel molestias natus, distinctio eos placeat velit nostrum alias facilis architecto earum repudiandae voluptatibus. Ipsa blanditiis corrupti temporibus maxime quibusdam nulla quisquam, omnis laborum ducimus, ipsam error aut minima quas ab nemo quos, optio recusandae asperiores eius odio eos excepturi illo?</p>
+                </div>
             </section>
             <section class="adventureLayout">
                 <h2>Adventure Awaits You!</h2>
