adding image rafting 6

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -54,7 +54,7 @@
                     <figcaption>Noodle Creek</figcaption>
                 </figure>
                 <figure>
-                    
+                    <img src="images/rafting6.jpg" alt="Rafting Image 6">
                     <figcaption>Maguito Gandalf Rapid</figcaption>
                 </figure>
                 <figure>
