--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="styles/rafting.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
@@ -8,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="About US rafting information page.">
         <meta name="author" content="Allison Ruault Wright">
-        <title>About US | White Water Rafting</title>
+        <title>Contact | White Water Rafting</title>
     </head> 
     <body>
         <header class="headerGrid">
@@ -23,7 +25,9 @@
             </div>
         </header>
         <main>
-           
+           <section>
+                <h1>Coming up soon</h1>
+           </section>
         </main>
         <footer>
             <p>&copy; 2024 White Water Rafting. Created by Allison R. Wright</p>
