--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -36,16 +36,16 @@
                 <h2 class="contactColor1">Meet Our Team</h2>
                 <div class="employee-profiles">
                   <figure>
-                    <img src="images/employee1.jpg" alt="Smiling Guide Anna">
-                    <figcaption>Anna - Lead River Guide</figcaption>
+                    <img src="images/employee1.jpg" alt="Smiling Gandalf">
+                    <figcaption>Gandalf - Lead River Guide</figcaption>
                   </figure>
                   <figure>
-                    <img src="images/employee2.jpg" alt="Happy Staff Jake">
-                    <figcaption>Jake - Guest Services Manager</figcaption>
+                    <img src="images/employee2.jpg" alt="Angry Gotham">
+                    <figcaption>Gotham - Guest Services Manager</figcaption>
                   </figure>
                   <figure>
-                    <img src="images/employee3.jpg" alt="Smiling Instructor Maya">
-                    <figcaption>Maya - Safety Instructor</figcaption>
+                    <img src="images/employee3.jpg" alt="Sweet Emmett">
+                    <figcaption>Emmett - Safety Instructor</figcaption>
                   </figure>
                 </div>
             </section>
