--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -25,16 +25,16 @@
             </div>
         </header>
         <main>
-            <section class="contact-info">
+            <section class="contactInfo">
                 <h1 class="contactColor">Contact Us</h1>
                 <p><strong>Address:</strong> 2641 Front St, Cuyahoga Falls, OH 44221</p>
                 <p><strong>Phone:</strong> (555) 123-4567</p>
                 <p><strong>Email:</strong> contactus@whitewaterrafting.com</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d11373.672760835567!2d-81.47925713955719!3d41.14269831884363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sCuyahoga%20Falls%20river%2C%20oh!5e0!3m2!1sen!2sus!4v1743370669309!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
-            <section class="team">
+            <section class="kittyTeam">
                 <h2 class="contactColor1">Meet Our Team</h2>
-                <div class="employee-profiles">
+                <div class="employeePics">
                   <figure>
                     <img src="images/employee1.jpg" alt="Smiling Gandalf">
                     <figcaption>Gandalf - Lead River Guide</figcaption>
@@ -49,7 +49,7 @@
                   </figure>
                 </div>
             </section>
-            <section class="form-section">
+            <section class="formSection">
                 <h2 class="contactColor2">Send Us a Message</h2>
                 <form action="#" method="post">
                   <label for="name">Name:</label>
