--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -75,7 +75,7 @@
                     <button type="submit">Send Message</button>
                     </form>
                 </section>
-            </>
+            </div>
         </main>
         <footer>
             <p><a href="https://app.moqups.com/V6UnyxZ4HtT8XKGzdomcimATsOdhLBHI/view/page/a9a5f8d52">View Wireframe</a></p>
