removing any styling from the iframe

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -51,7 +51,7 @@
                         <p><strong>Phone: </strong> (555) 123-4567</p>
                         <p><strong>Email: </strong> contactus@whitewaterrafting.com</p>
                     </div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d11373.672760835567!2d-81.47925713955719!3d41.14269831884363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sCuyahoga%20Falls%20river%2C%20oh!5e0!3m2!1sen!2sus!4v1743370669309!5m2!1sen!2sus" width="600" height="450";" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d11373.672760835567!2d-81.47925713955719!3d41.14269831884363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sCuyahoga%20Falls%20river%2C%20oh!5e0!3m2!1sen!2sus!4v1743370669309!5m2!1sen!2sus"></iframe>
                 </section>
                 <section class="formSection">
                     <h2 class="contactColor2">Send Us a Message</h2>
