adding pictures to the contact page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -30,15 +30,15 @@
                 <h2 class="contactColor1">Meet Our Team</h2>
                 <div class="employeePics">
                   <figure>
-                    <img src="images/employee1.jpg" alt="Smiling Gandalf">
+                    <img src="images/Gandalf.png" alt="Smiling Gandalf">
                     <figcaption>Gandalf - Lead River Guide</figcaption>
                   </figure>
                   <figure>
-                    <img src="images/employee2.jpg" alt="Angry Gotham">
+                    <img src="images/Darkness.png" alt="Angry Gotham">
                     <figcaption>Gotham - Guest Services Manager</figcaption>
                   </figure>
                   <figure>
-                    <img src="images/employee3.jpg" alt="Sweet Emmett">
+                    <img src="images/Emmett.png" alt="Sweet Emmett">
                     <figcaption>Emmett - Safety Instructor</figcaption>
                   </figure>
                 </div>
