--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -57,7 +57,7 @@
                     <h2 class="contactColor2">Send Us a Message</h2>
                     <form action="#" method="post">
                     <label for="name"><strong>Name:</strong></label>
-                    <input type="text" id="name" name="name" placeholder="Enter your name">
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
                 
                     <label for="email"><strong>Email:</strong></label>
                     <input type="email" id="email" name="email" placeholder="Your email address" required>
