--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -56,9 +56,10 @@
                 <section class="formSection">
                     <h2 class="contactColor2">Send Us a Message</h2>
                     <form action="#" method="post">
-                    <label for="name"><strong>Name:</strong></label>
-                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
-                
+                    <label for="fname"><strong>First Name:</strong></label>
+                    <input type="text" id="fname" name="fname" placeholder="Enter Your Firtst Name" required>
+                    <label for="lname"><strong>Last Name:</strong></label>
+                    <input type="text" id="lname" name="lname" placeholder="Enter Your Last Name" required>
                     <label for="email"><strong>Email:</strong></label>
                     <input type="email" id="email" name="email" placeholder="Your email address" required>
                 
