--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -55,13 +55,16 @@
                 </section>
                 <section class="formSection">
                     <h2 class="contactColor2">Send Us a Message</h2>
+
                     <form action="#" method="post">
+                     /*informantion on the name*/   
                     <label for="fname"><strong>First Name:</strong></label>
                     <input type="text" id="fname" name="fname" placeholder="Enter Your Firtst Name" required>
-                    <label for="lname"><strong>Last Name:</strong></label>
-                    <input type="text" id="lname" name="lname" placeholder="Enter Your Last Name" required>
+                    <!--<label for="lname"><strong>Last Name:</strong></label>
+                    <input type="text" id="lname" name="lname" placeholder="Enter Your Last Name" required>-->
                     <label for="email"><strong>Email:</strong></label>
                     <input type="email" id="email" name="email" placeholder="Your email address" required>
+                    
                     <p>Purpose of Message:</p>
                     
                     <input type="radio" id="general" name="purpose" value="general" required>
