--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -13,6 +13,29 @@
         <title>About Us | White Water Rafting</title>
     </head> 
     <body>
-        <header>
+        <header class="headerGrid">
+            <div>
+                <nav>
+                    <img src="images/logo.png" alt="White Water Rafting Logo">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="trips.html">Trips</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+            <p><a href="https://app.moqups.com/V6UnyxZ4HtT8XKGzdomcimATsOdhLBHI/view/page/a9a5f8d52">View Wireframe</a></p>
+            <p>&copy; 2024 White Water Rafting. Created by Allison R. Wright</p>
+            <div class="socLinks">
+                <a href="https://facebook.com"><img src="images/f.logo.png" alt="Facebook"></a>
+                <a href="https://twitter.com"><img src="images/tweet.png" alt="Twitter"></a>
+                <a href="https://Instagram.com"><img src="images/insta.png" alt="Instagram"></a>
+            </div> 
+        </footer>
+    </body>
 
  
