--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -55,8 +55,7 @@
                 <section class="formSection">
                     <h2 class="contactColor2">Send Us a Message</h2>
                     <form action="#" method="post">
-                     /*informantion on the name*/   
-                    <label for="name"><strong>First Name:</strong></label>
+                    <label for="name"><strong>Name:</strong></label>
                     <input type="text" id="name" name="fname" placeholder="Enter your name" required>
                     <label for="email"><strong>Email:</strong></label>
                     <input type="email" id="email" name="email" placeholder="Your email address" required>
