--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,16 +30,16 @@
                 <div class="heroText">
                     <h1>Experience the Thrill of the Rapids</h1>
                     <p>Join Us for the Ride of Your Life</p>
-                    <p>to learn more keep kayaking through our Rapids</p>
+                    <p>To learn more, keep kayaking through our Rapids</p>
                 </div>
-                <div class="sliderImg"><img src="images/rafting2.jpg" alt="Rafting Adventure 1"></div>
-                <div class="sliderImg"><img src="images/rafting2.jpg" alt="Rafting Adventure 1"></div>
-                <div class="sliderImg"><img src="images/rafting2.jpg" alt="Rafting Adventure 1"></div>
-            </section>
+                <img src="images/rafting2.jpg" alt="Rafting Adventure 1">
+              </section>
             <section class="newsletter">
                 <h3 class="nwsltrTtl">Don't miss any news sign up to our newsletter</h3>
                 <form class="nswltrFmt" action="#" method="post">
-                    <label for="name" for="email" for="button"><input type="text" id="name" name="fname" placeholder="Enter your name" required><input type="email" id="email" name="email" placeholder="Your email address" required><button id="button" type="submit">Sign Up Now</button></label>
+                    <input type="text" id="name" name="fname" placeholder="Enter your name" required>
+                    <input type="email" id="email" name="email" placeholder="Your email address" required>
+                    <button id="button" type="submit">Sign Up Now</button>
                 </form>
             </section>
             <section class="offerWrapper">
