updating trips page

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,9 +24,50 @@
                 </nav>
             </div>
         </header>
-        <main>
-
-        </main>
+        <main class="tripContent">
+            <section class="tripDetails">
+                <div class="tripTtl">
+                    <h2>Our Adventures</h2>
+                </div>
+                <div clas="tripWrapper">
+                    <div class="tripCard">
+                        <img src="images/river1.jpg" alt="Sunset River Ride">
+                        <div>
+                            <h3>Sunset River Ride</h3>
+                            <p>Experience the beauty of a serene float down the river as the sun sets. Perfect for beginners and families.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                        </div>
+                    </div>
+                    <div class="tripCard">
+                        <img src="images/rapids.jpg" alt="Class III Rapids">
+                        <div>
+                            <h3>Class III Rapids Thrill</h3>
+                            <p>Get your adrenaline pumping! This trip offers a fun challenge for intermediate rafters. Ages 12+. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                        </div>
+                    </div>
+                    <div class="tripCard">
+                        <img src="images/extreme.jpg" alt="Extreme Whitewater">
+                        <div>
+                            <h3>Extreme Whitewater Adventure</h3>
+                            <p>For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="ctuSubsWrapper">
+                <div class="contactCta">
+                    <h1>Book Your Adventure Today!</h1>
+                    <p>Ready for the thrill of a lifetime? <a href="contact.html">Contact us</a> to reserve your spot! </p>
+                </div>
+                <div class="subscribeNow">
+                    <h3 class="sbscbTtl">Don't miss any news sign up to our newsletter</h3>
+                    <form class="sbscbFmt" action="#" method="post">
+                        <input type="text" id="name" name="fname" placeholder="Enter your name" required>
+                        <input type="email" id="email" name="email" placeholder="Your email address" required>
+                        <button id="button" type="submit">Sign Up Now</button>
+                    </form>
+                </div>
+            </section>
+        </main>        
         <footer>
             <p><a href="https://app.moqups.com/V6UnyxZ4HtT8XKGzdomcimATsOdhLBHI/view/page/a9a5f8d52">View Wireframe</a></p>
             <p>&copy; 2024 White Water Rafting. Created by Allison R. Wright</p>
