updating size on trip page

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -55,8 +55,8 @@
             </section>
             <section class="ctuSubsWrapper">
                 <div class="contactCta">
-                    <h1>Book Your Adventure Today!</h1>
-                    <p>Ready for the thrill of a lifetime? <a href="contact.html">Contact us</a> to reserve your spot! </p>
+                    <h3>Book Your Adventure Today!</h3>
+                    <p>Ready for the thrill of a lifetime?<button><a href="contact.html">Contact us</a></button> to reserve your spot! </p>
                 </div>
                 <div class="subscribeNow">
                     <h3 class="sbscbTtl">Don't miss any news sign up to our newsletter</h3>
@@ -69,7 +69,7 @@
             </section>
         </main>        
         <footer>
-            <p><a href="https://app.moqups.com/V6UnyxZ4HtT8XKGzdomcimATsOdhLBHI/view/page/a9a5f8d52">View Wireframe</a></p>
+            <p><a href="https://app.moqups.com/V6UnyxZ4HtT8XKGzdomcimATsOdhLBHI/edit/page/a9d8382f3">View Wireframe</a></p>
             <p>&copy; 2024 White Water Rafting. Created by Allison R. Wright</p>
             <div class="socLinks">
                 <a href="https://facebook.com"><img src="images/f.logo.png" alt="Facebook"></a>
