changed my trips page form grid to be a flex

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -26,32 +26,27 @@
         </header>
         <main class="tripContent">
             <section class="tripDetails">
-                <div class="tripTtl">
-                    <h2>Our Adventures</h2>
-                </div>
-                <div clas="tripWrapper">
-                    <div class="tripCard">
-                        <img src="images/river1.jpg" alt="Sunset River Ride">
-                        <div>
-                            <h3>Sunset River Ride</h3>
-                            <p>Experience the beauty of a serene float down the river as the sun sets. Perfect for beginners and families.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
-                        </div>
-                    </div>
-                    <div class="tripCard">
-                        <img src="images/rapids.jpg" alt="Class III Rapids">
-                        <div>
-                            <h3>Class III Rapids Thrill</h3>
+                <h2>Our Adventures</h2>
+                    <figure>
+                        <img src="images/rafting6.jpg" alt="Sunset River Ride">
+                        <figcaption>
+                            <h3>Maguito Gandalf Rapide</h3>
+                            <p>Experience the beauty of a serene float down the river as the sun sets. Perfect for beginners and families.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p></figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting2.jpg" alt="Class III Rapids">
+                        <figcaption>
+                            <h3>Osiris Rapid</h3>
                             <p>Get your adrenaline pumping! This trip offers a fun challenge for intermediate rafters. Ages 12+. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
-                        </div>
-                    </div>
-                    <div class="tripCard">
-                        <img src="images/extreme.jpg" alt="Extreme Whitewater">
-                        <div>
-                            <h3>Extreme Whitewater Adventure</h3>
+                        
+                    </figure>
+                    <figure>
+                        <img src="images/rafting5.jpg" alt="Extreme Whitewater">
+                        <figcaption>
+                            <h3>Gotham Kitty Adventure</h3>
                             <p>For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
-                        </div>
-                    </div>
-                </div>
+                        </figcaption>
+                    </figure>
             </section>
             <section class="ctuSubsWrapper">
                 <div class="contactCta">
