fixing line 59 on index

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -56,7 +56,7 @@
                     <p>At White Water Rafting, we are passionate about providing you with the ultimate adventure experience. Our team of expert guides is dedicated to ensuring your safety and enjoyment as you navigate the thrilling rapids of the river. Whether you're a seasoned pro or a first-time rafter, we have the perfect trip for you.</p>
                     <p>Join us for an unforgettable journey through some of the most breathtaking landscapes in the country. Our trips are designed to cater to all skill levels, so you can relax and enjoy the ride while we take care of the rest.</p>
                     <p>Book your adventure today and get ready for the ride of your life!</p>
-                    <button type="button" class="lrnMrBtn"><a href="trips.html"</a> Learn More</button>
+                    <button type="button" class="lrnMrBtn"></button><a href="trips.html">Learn More</a></button>
                 </div>
             </section>
           </main>
