--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -31,28 +31,28 @@
                         <img src="images/rafting6.jpg" alt="Sunset River Ride">
                         <figcaption>
                             <h3>Maguito Gandalf Rapide</h3>
-                            <p>Experience the beauty of a serene float down the river as the sun sets. Perfect for beginners and families.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                            Experience the beauty of a serene float down the river as the sun sets. Perfect for beginners and families.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="images/rafting2.jpg" alt="Class III Rapids">
                         <figcaption>
                             <h3>Osiris Rapid</h3>
-                            <p>Get your adrenaline pumping! This trip offers a fun challenge for intermediate rafters. Ages 12+. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                            Get your adrenaline pumping! This trip offers a fun challenge for intermediate rafters. Ages 12+. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!
                         </figcaption>
                     </figure>
                     <figure>
                         <img src="images/rafting5.jpg" alt="Extreme Whitewater">
                         <figcaption>
                             <h3>Gotham Kitty Adventure</h3>
-                            <p>For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p></figcaption><p>For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</p>
+                            For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</figcaption>
                         </figcaption>
                     </figure>
             </section>
             <section class="ctuSubsWrapper">
                 <div class="contactCta">
                     <h3>Book Your Adventure Today!</h3>
-                    <p>Ready for the thrill of a lifetime?<button><a href="contact.html">Contact us</a></button> to reserve your spot! </p>
+                    <p>Ready for the thrill of a lifetime?<a href="contact.html">Contact us</a> to reserve your spot! </p>
                 </div>
                 <div class="subscribeNow">
                     <h3 class="sbscbTtl">Don't miss any news sign up to our newsletter</h3>
