removing extra figcation

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -45,7 +45,7 @@
                         <img src="images/rafting5.jpg" alt="Extreme Whitewater">
                         <figcaption>
                             <h3>Gotham Kitty Adventure</h3>
-                            For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!</figcaption>
+                            For the thrill seekers! Take on the biggest rapids and most intense whitewater. Previous experience required.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsum cum itaque quo incidunt soluta sint et recusandae corrupti ut!
                         </figcaption>
                     </figure>
             </section>
