removing buttons adding styling to make it look like button

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -52,7 +52,7 @@
             <section class="ctuSubsWrapper">
                 <div class="contactCta">
                     <h3>Book Your Adventure Today!</h3>
-                    <p>Ready for the thrill of a lifetime?<a href="contact.html">Contact us</a> to reserve your spot! </p>
+                    <p>Ready for the thrill of a lifetime?<a class="ctuBtn" href="contact.html">Contact us</a> to reserve your spot! </p>
                 </div>
                 <div class="subscribeNow">
                     <h3 class="sbscbTtl">Don't miss any news sign up to our newsletter</h3>
